# SFcalculator_torch

./: Fmodel_cif.csv  Fmodel_my_pred.csv  Fmodel_pdb_mtz.csv  Fprotein_after_exp_guid_boltz_coords_boltz_bfactor.csv  Fprotein_before_exp_guid_boltz_coords_boltz_bfactor.csv  Fprotein_boltz_bfactor.csv  Fprotein_cif.csv  Fprotein_cif_nometal.csv  Fprotein_cif_per_residue_B.csv  Fprotein_gt.csv  Fprotein_my_pred.csv  Fprotein_my_pred_no_align.csv  Fprotein_my_pred_true_Bfactor.csv  Fprotein_random_bfactor.csv  Fprotein_random_coords.csv  Hasu_cif.csv  Tutorial_only_fprotein.ipynb  atoms_biso.csv  atoms_biso_exp_guid.csv  atoms_biso_md_bfactor.csv  atoms_biso_md_plddt2bfactor.csv  atoms_biso_plddt.csv  atoms_biso_random.csv  atoms_biso_xray_bfactor.csv  atoms_biso_xray_plddt2bfactor.csv  atoms_random_coords.csv  filter_cif_nometal.py  pyproject.toml  sfc_calcF_test.py
.github/workflows/: Build.yml  Publish.yml
SFC_Torch/: Fmodel.py  __init__.py  io.py  symmetry.py
tests/data/: 1dur_nometal.cif  1dur_nometal_filtered.cif  1dur_nometal_onlyatoms.cif  4NTZ-sf.cif  4NTZ.cif
