[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfcalculator_torch"
dynamic = ["version"]
description = "A differentiable pipeline connecting molecule models and scattering data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Minhuan Li", email = "minhuanli@g.harvard.edu"}
]
keywords = ["pytorch", "structure-factors", "differentiable", "crystallography", "cryoEM"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "gemmi>=0.5.6,<=0.6.7",
    "reciprocalspaceship>=0.9.18,<=1.0.3",
    "numpy<2.0.0",
    "tqdm",
    "loguru",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["pytest", "pytest-cov", "build", "twine"]

[project.urls]
Homepage = "https://github.com/Hekstra-Lab/SFcalculator_torch"
Documentation = "https://hekstra-lab.github.io/SFcalculator_torch/"
Repository = "https://github.com/Hekstra-Lab/SFcalculator_torch"
"Bug Tracker" = "https://github.com/Hekstra-Lab/SFcalculator_torch/issues"

[tool.setuptools]
packages = ["SFC_Torch"]
include-package-data = true

[tool.setuptools.package-data]
SFC_Torch = ["VERSION"]

[tool.setuptools.dynamic]
version = {file = "SFC_Torch/VERSION"}

[tool.pytest.ini_options]
addopts = "--cov=SFC_Torch --cov-report xml --cov-report term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["SFC_Torch"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

